# scanf-project

./: .gitignore  CMakeLists.txt  README.md  main.c  my_scanf.c  my_scanf.h  test_suite.c
